adhocracy-plus/assets/scss/components/landing_page.scss
$primary-blue: #1D6FE2;
$white: white;
$black: black;
$breakpoint-md: 768px;
$faq-bg: #f5f5f5;
$text-color: #1A1A1A;

.lp-section {
    margin-top: 3rem;
}

.lp-hero {
    background-color: $primary-blue;
    display: grid;
    grid-template-columns: 40% 40%;
    justify-content: center;
    align-items: center;
    color: $white;
    margin: auto;
    padding: 3em 0;

    &-text {
        max-width: 90%;
    }

    &-buttons {
        display: flex;
        gap: 1em;
    }

    &-img {
        position: relative;
        display: flex;
        justify-content: center;
        align-items: center;
        height: 400px;

        img {
            height: 100%;
            z-index: 1;
            position: relative;
            border-bottom-right-radius: 30%;
        }
    }
}

.lp-floating-noti {
    background-color: $white;
    color: $black;
    padding: 8px 12px;
    border-radius: 8px;
    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
    position: absolute;
    font-size: 14px;
    z-index: 2;

    > i {
        color: $primary-blue;
        margin-right: 0.5rem;
    }
}

// stylelint-disable-next-line no-duplicate-selectors  
.lp-hero-img {
    .lp-floating-noti {
        &:first-of-type {
            bottom: 10%;
            left: 0;
            transform: translateX(-50%);
        }

        &:last-of-type {
            top: 20%;
            right: 0;
            transform: translateX(40%);
        }
    }
}

.btn {
    &--transparent {
        > a {
            text-decoration: none;
            color: inherit;
        }
    }

    &--black {
        > a {
            text-decoration: none;
            color: inherit;
        }
    }
}

@media (max-width: $breakpoint-md) {
    .lp-hero {
        display: flex;
        flex-direction: column;
        padding: 20px 0;
        text-align: center;

        &-img {
            order: 1;
            margin-bottom: 2rem;
            height: 250px;
        }

        &-text {
            order: 2;
            max-width: 95%;
            margin: 0 auto;

            > p {
                padding-top: 0.25rem;
                text-align: left;
            }
        }

        &-buttons {
            display: grid;
            gap: .75em;

            > button {
                min-width: 100%;
            }
        }
    }

    .lp-floating-noti {
        font-size: 12px;
        padding: 6px;
        max-width: 160px;
    }

    .lp-block {
        > h4 {
            font-size: 1.25rem;
        }

        > p {
            font-size: 1rem;
        }
    }

// stylelint-disable-next-line no-duplicate-selectors  
    .lp-hero-img {
        .lp-floating-noti {
            &:first-of-type {
                bottom: -5%;
                left: 50%;
            }

            &:last-of-type {
                display: none;
            }
        }

        > img {
            width: auto;
            height: auto;
            max-width: 90%;
            max-height: 250px;
        }
    }
}

.lp-blocks-header {
    padding-top: 2rem;
    text-align: center;

    &__header {
        color: $primary-blue;
        text-transform: uppercase;
        margin-bottom: 0;
    }

    &__subheader {
        margin-top: 0;
        font-weight: normal;
    }
}

.lp-blocks {
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
    gap: 2em;
    margin: 0 3em;
    align-items: center;
}

.lp-block {
    position: relative;
    overflow: hidden;
    color: $white;
    padding: 2rem;
    font-size: 1.25rem;
    display: block;
    text-decoration: none;
    aspect-ratio: 1/1;
    width:100%;
    max-height: 500px;

    &__bg_image {
        position: absolute;
        top: 0;
        left: 0;
        width: 100%;
        height: 100%;
        object-fit: cover;
        z-index: 1;
    }

    &:after {
        content: '';
        position: absolute;
        top: 0;
        left: 0;
        width: 100%;
        height: 100%;
        background-color: rgba(0, 0, 0, 0.5);
        z-index: 2;
    }

    h4,
    p,
    i,
    a {
        position: relative;
        z-index: 3;
    }

    > i {
        position: absolute;
        bottom: 2rem;
        left: 2rem;
        z-index: 3;
        font-size: 3rem;
    }

    &__icon {
        position: absolute;
        bottom: 2rem;
        left: 2rem;
        z-index: 3;
        height: 3rem;
    }

    span {
        position: absolute;
        bottom: 2rem;
        right: 2rem;
        z-index: 3;
        color: $white;
        text-decoration: none;
    }

    h4 {
        margin-top: 0;
    }
}

.lp-text-blocks {
    display: grid;
    grid-template-rows: 1fr 1fr;
    gap: 2em;
    height: 100%;
    max-height: 500px;
}

.lp-text-block {
    text-decoration: none;
    background-color: $primary-blue;
    color: $white;
    padding: 1.5rem 1rem 0 1.5rem;
    height: 100%;
    box-sizing: border-box;
    min-height: 0;
    display: flex;
    flex-direction: column;

    &__top-row {
        display: flex;
        justify-content: space-between;
    }

    &__icon {
        height: 3rem;
        width: auto;
        order: 1;
    }

    &__arrow {
        font-size: 1.5rem !important;
        color: $white;
        order: 2;
        margin-left: auto;
    }

    &__bottom {
        margin-top: auto;
        padding-top: 1rem;
    }
}

@media (max-width: $breakpoint-md) {
    .lp-blocks {
        grid-template-columns: 1fr;
        grid-template-rows: auto auto auto;
        gap: 2em;
        margin: 1rem;
    }

    .lp-text-blocks {
        grid-template-columns: 1fr;
        grid-template-rows: auto auto;
    }
}

.lp-section-header {
    text-align: center;
    padding-top: 1rem;
    margin-bottom: 2rem;

    &__text {
        font-size: 1rem;
        text-transform: uppercase;
        color: $primary-blue;
    }

    &__subtext {
        font-size: 2rem;
    }
}

.lp-organisations-map {
    position: relative;
    display: flex;
    justify-content: center;
    
    > img {
        max-height: 600px;
        display: block;
        margin: 0 auto;
        padding-left: 8rem;
    }
    
    // Gradient above the image
    &:before {
        content: '';
        position: absolute;
        top: 0;
        left: 0;
        right: 0;
        height: 100px;
        background: linear-gradient(to bottom, white, transparent);
        pointer-events: none;
        z-index: 2;
    }
    
    // Gradient below the image
    &:after {
        content: '';
        position: absolute;
        bottom: 0;
        left: 0;
        right: 0;
        height: 100px;
        background: linear-gradient(to top, white, transparent);
        pointer-events: none;
        z-index: 2;
    }
    
    .lp-organisations-info-overlay {
        position: absolute;
        bottom: 15px;
        left: 50%;
        transform: translateX(-50%);
        background-color: $white;
        color: $black;
        padding: 8px 16px; 
        border-radius: 4px;
        white-space: nowrap;
        z-index: 3;
        box-shadow: 0 16px 32px 0 rgba(22, 34, 51, 0.16);

        > i {
            margin-right: .75rem;
            color: $primary-blue;
        }
    }
}

@media (max-width: $breakpoint-md) {
    .lp-organisations-info-overlay {
        padding: 4px 8px !important;
        bottom: -30px !important;
    }
}

.lp-faq {
    padding: 2rem 10%;
    background-color: $faq-bg;
}

.lp-newsletter {
    background-color: $text-color;
    color: $white;
    text-align: left;
    padding: .5rem 5%;
    display: grid;
    grid-template-columns: 80% 20%;
    align-items: center;

    > div > h5 {
        margin-bottom: 0.5rem;
    } 

    // Mobile styles
    @media (max-width: $breakpoint-md) {
        grid-template-columns: 1fr;
        text-align: center;
        gap: 1rem;
        padding: 2rem 5%;
        
        > div:first-child {
            text-align: center;
        }
        
        .btn--gradient {
            width: 100%;
        }
    }
}

